# encoding

./: Cargo.toml  README.md  cargo
src/: decode.rs  encode.rs  main.rs
test/: lib.rs
tests/: lib.rs
tests/data/ascii/: alphabet_repeating.txt  alphanumeric.txt  simple_multiple_unique_end.txt  simple_single_unique_end.txt  special_characters.txt  special_characters_repeating.txt
tests/data/unicode/: emojis.txt  threebyte.txt  twobyte.txt
