[package]
name = "manta"
version = "0.1.0"
authors = ["Gabriela Brown <gabcbrown@gmail.com>"]
edition = "2018"

[lib]
name = "manta"
path = "src/lib.rs"

[[bin]]
name = "manta"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
datatest = { git = "https://github.com/cormacrelf/datatest" }

[[test]]
name = "integration"
path = "tests/lib.rs"



